--- a/personal_safety/run/runner/felix/config.ini
+++ b/personal_safety/run/runner/felix/config.ini
@@ -51,18 +51,18 @@ felix.auto.start.5=\
 "file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ont.risk_0.1.0.SNAPSHOT.jar"
 felix.auto.start.6=\
 "file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ui.dm.mobile_0.2.0.pmd-SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_org.universAAL.ui_ui.handler.gui.tableLayout_0.jar"
-felix.auto.install.6=\
-"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ui.handler.gui_0.1.1.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_org.universAAL.ui_ui.handler.gui.tableLayout_0.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ui.handler.gui_0.1.1.SNAPSHOT-DEMO.jar" \
 "file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.sms_0.1.0.SNAPSHOT.jar"
-felix.auto.install.7=\
+felix.auto.start.7=\
 "file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.service_0.1.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.sw.panic_0.1.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/smp.test-location.publisher_0.0.2.SNAPSHOT.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.sw.panic_0.1.0.SNAPSHOT.jar"
+felix.auto.install.7="file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/smp.test-location.publisher_0.0.2.SNAPSHOT.jar"
 
 ##############################
 # System properties
 ##############################
 remoteOBR=
+skipTests=false
 maven.compile.source=1.5
 maven.compile.target=1.5
