--- a/personal_safety/run/runner/felix/system.properties
+++ b/personal_safety/run/runner/felix/system.properties
@@ -13,3 +13,8 @@ felix.upnpbase.cyberdomo.net.onlyIPV6=false
 cyberdomo.ssdp.mx=5
 cyberdomo.ssdp.buffersize=2048
 cyberdomo.ssdp.port=13531
+org.universAAL.AALapplication.personal_safety.sms.user=amedrano@lst.tfo.upm.es
+org.universAAL.AALapplication.personal_safety.sms.pass=NDX1296
+org.universAAL.AALapplication.personal_safety.sms.account=EX0083513
+org.universAAL.AALapplication.personal_safety.sms.server=https://www.esendex.com/secure/messenger/formpost/SendSMS.aspx
+org.universAAL.AALapplication.personal_safety.sms.send=true
