--- a/long_term_behav/LTBA/pom.xml
+++ b/long_term_behav/LTBA/pom.xml
@@ -22,6 +22,18 @@
 			<artifactId>mw.bus.service</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.drools</artifactId>
+			<version>0.1.0</version>
+			
+		</dependency>
+		
+		
+	
+  
+  
+		
 	</dependencies>
     <build>
 		<plugins>
