--- a/long_term_behav/LTBA/pom.xml
+++ b/long_term_behav/LTBA/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.0-SNAPSHOT</version>
 			
 		</dependency>
 		
