--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -1,10 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.universAAL.ontology</groupId>
+  
+      <parent>
+		<groupId>org.universAAL.ontology</groupId>
+		<artifactId>ont.pom</artifactId>
+		<version>1.0.1</version>
+	</parent>
+  
+  
   <artifactId>ont.drools</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <description>Drools ontology</description>
   <packaging>jar</packaging>
+  
+  
+  
+  
+  
     <dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
