--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -43,6 +43,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.ontology.drools</Export-Package>
+						<Private-Package>org.universAAL.ontology</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
