--- a/long_term_behav/LTBA/pom.xml
+++ b/long_term_behav/LTBA/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>LTBA</artifactId>
-  <version>1.0.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <name/>
   <description/>
   <packaging>bundle</packaging>
