--- a/long_term_behav/Reasoner/pom.xml
+++ b/long_term_behav/Reasoner/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>mw.bus.service</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
+			<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.drools</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
     <build>
 		<plugins>
