Initial Import for Health Manager (Main Component)
shell for UI forms.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ health/healt.treat.manager/.classpath
 health/healt.treat.manager/.project
 health/healt.treat.manager/.settings
 health/healt.treat.manager/target
+health/health.manager/.classpath
+health/health.manager/.project
+health/health.manager/.settings
+health/health.manager/target
 health/health.ont/.classpath
 health/health.ont/.project
 health/health.ont/.settings
