renamed project. wrong spelling ^^

--- a/.gitignore
+++ b/.gitignore
@@ -30,14 +30,6 @@ agenda/handler.web/.classpath
 agenda/handler.web/.project
 agenda/handler.web/.settings
 agenda/handler.web/target
-health/healt.treat.logger/.classpath
-health/healt.treat.logger/.project
-health/healt.treat.logger/.settings
-health/healt.treat.logger/target
-health/healt.treat.manager/.classpath
-health/healt.treat.manager/.project
-health/healt.treat.manager/.settings
-health/healt.treat.manager/target
 health/health.manager/.classpath
 health/health.manager/.project
 health/health.manager/.settings
@@ -46,6 +38,14 @@ health/health.ont/.classpath
 health/health.ont/.project
 health/health.ont/.settings
 health/health.ont/target
+health/health.treat.logger/.classpath
+health/health.treat.logger/.project
+health/health.treat.logger/.settings
+health/health.treat.logger/target
+health/health.treat.manager/.classpath
+health/health.treat.manager/.project
+health/health.treat.manager/.settings
+health/health.treat.manager/target
 health/pom/.project
 health/pom/.settings
 help_when_out/hwo.mobile/.classpath
