--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>ont.drools</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <description>Drools ontology</description>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   
   
   
