--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -44,7 +44,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>ontology.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.ontology.drools</Export-Package>
