--- a/agenda/dm/pom.xml
+++ b/agenda/dm/pom.xml
@@ -129,7 +129,20 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<!-- Export-Package>org.universAAL.ui.dm</Export-Package -->
-						<Private-Package>org.universAAL.ui.dm</Private-Package>
+						<Import-Package>com.mysql.jdbc,com.hp.hpl.jena.db,
+	com.hp.hpl.jena.query, com.hp.hpl.jena.rdf.model,
+	com.mysql.jdbc.jdbc2.optional, javax.sql, javax.xml.datatype,
+	org.osgi.framework, org.slf4j, org.universAAL.context.conversion.jena,
+	org.universAAL.middleware.context, org.universAAL.middleware.input,
+	org.universAAL.middleware.io.owl, org.universAAL.middleware.io.rdf,
+	org.universAAL.middleware.output, org.universAAL.middleware.owl,
+	org.universAAL.middleware.owl.supply, org.universAAL.middleware.rdf,
+	org.universAAL.middleware.service,
+	org.universAAL.middleware.service.owl,
+	org.universAAL.middleware.sodapop.msg, org.universAAL.middleware.util,
+	org.universAAL.ontology.location, org.universAAL.ontology.phThing,
+	org.universAAL.ontology.profile</Import-Package>
+	<Private-Package>org.universAAL.ui.dm</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
