--- a/food_shopping/food_shopping.service.client/.settings/org.eclipse.m2e.core.prefs
+++ b/food_shopping/food_shopping.service.client/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-#Wed Oct 12 14:39:09 EEST 2011
+#Thu Nov 10 14:47:20 EET 2011
 activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
