--- a/food_shopping/food_shopping.service.server/.settings/org.eclipse.m2e.core.prefs
+++ b/food_shopping/food_shopping.service.server/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-#Wed Oct 12 12:15:30 EEST 2011
+#Thu Nov 10 14:41:58 EET 2011
 activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
