--- a/personal_safety/pom/pom.xml
+++ b/personal_safety/pom/pom.xml
@@ -40,6 +40,10 @@
   	<connection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/personal_safety</connection>
   	<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/personal_safety</developerConnection>
   </scm>
+      <properties>
+		<maven.compile.source>1.3</maven.compile.source>
+		<maven.compile.target>1.3</maven.compile.target>
+	</properties>
   <modules>
   	<module>../service</module>
   	<module>../sms.sender</module>
