--- a/long_term_behav/Reasoner/pom.xml
+++ b/long_term_behav/Reasoner/pom.xml
@@ -37,7 +37,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>principal.Activator</Bundle-Activator>
+						<Bundle-Activator>mainclasses.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 					</instructions>
