--- a/long_term_behav/Reasoner/pom.xml
+++ b/long_term_behav/Reasoner/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>ont.drools</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 <groupId>org.universAAL.samples</groupId>
+  	     <artifactId>service.utils</artifactId>
+  	     <version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
     <build>
 		<plugins>
