fixed service and pom

--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -47,7 +47,7 @@
 						<Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.ontology.drools</Export-Package>
+						<Export-Package>org.universAAL.ontology.drools,org.universAAL.ontology.drools.service</Export-Package>
 						<Private-Package>org.universAAL.ontology</Private-Package>
 					</instructions>
 				</configuration>
