--- a/health/pom/pom.xml
+++ b/health/pom/pom.xml
@@ -25,4 +25,58 @@
   	<module>../health.treat.logger</module>
   	<module>../health.treat.manager</module>
   </modules>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.universAAL.middleware</groupId>
+  			<artifactId>mw.bus.context</artifactId>
+  			<version>0.3.0-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.data.representation</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.context</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.service</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.measurement</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.phWorld</artifactId>
+			<version>0.2.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.AALapplication</groupId>
+			<artifactId>health.ont</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+  		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.io</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.universAAL.context</groupId>
+			<artifactId>ctxt.che</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
