Health Motivation Module initial import

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ health/health.manager/.classpath
 health/health.manager/.project
 health/health.manager/.settings
 health/health.manager/target
+health/health.motivation/.classpath
+health/health.motivation/.project
+health/health.motivation/.settings
+health/health.motivation/target
 health/health.ont/.classpath
 health/health.ont/.project
 health/health.ont/.settings
