--- a/health/health.treat.logger/pom.xml
+++ b/health/health.treat.logger/pom.xml
@@ -6,7 +6,7 @@
     <version>0.1.0-SNAPSHOT</version>
     <relativePath>../pom</relativePath>
   </parent>
-  <artifactId>health.treat.loggger</artifactId>
+  <artifactId>health.treat.logger</artifactId>
   <name>Health Treatment Log</name>
   <description>Enables Storage, and Listing of Treatments that the assisted person has done</description>
   <inceptionYear>2011</inceptionYear>  
