--- a/health/pom/pom.xml
+++ b/health/pom/pom.xml
@@ -24,6 +24,7 @@
   	<module>../health.ont</module>
   	<module>../health.treat.logger</module>
   	<module>../health.treat.manager</module>
+  	<module>../health.motivation</module>
   </modules>
   <dependencyManagement>
   	<dependencies>
@@ -46,8 +47,17 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
+		</dependency><dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.io</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.universAAL.context</groupId>
+			<artifactId>ctxt.che</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency><dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.measurement</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
@@ -67,16 +77,16 @@
 			<artifactId>health.ont</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
-  		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
-		</dependency>		
 		<dependency>
-			<groupId>org.universAAL.context</groupId>
-			<artifactId>ctxt.che</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<groupId>org.universAAL.AALapplication</groupId>
+			<artifactId>health.treat.logger</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.AALapplication</groupId>
+			<artifactId>health.treat.manager</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>	
   	</dependencies>
   </dependencyManagement>
 </project>
