--- a/long_term_behav/Reasoner/pom.xml
+++ b/long_term_behav/Reasoner/pom.xml
@@ -22,7 +22,17 @@
 			<artifactId>mw.bus.service</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
-			<dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.io</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
