--- a/long_term_behav/Reasoner/pom.xml
+++ b/long_term_behav/Reasoner/pom.xml
@@ -1,8 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
+  
+  
+  
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>Reasoner</artifactId>
   <version>0.1.0-SNAPSHOT</version>
+  
+  
+  
+  
   <name/>
   <description/>
   <packaging>bundle</packaging>
@@ -32,15 +40,24 @@
 			<artifactId>ont.profile</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		
+	
 		<dependency>
 		 <groupId>org.universAAL.samples</groupId>
   	     <artifactId>service.utils</artifactId>
   	     <version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+		<groupId>org.universAAL.samples</groupId>
+	<artifactId>service.utils</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
