--- a/.gitattributes
+++ b/.gitattributes
@@ -1262,6 +1262,7 @@ long_term_behav/LTBA/src/main/java/principal/SCalleeProvidedService.java -text
 long_term_behav/LTBA/src/main/java/principal/SCaller.java -text
 long_term_behav/Reasoner/pom.xml -text
 long_term_behav/Reasoner/src/main/java/mainclasses/Activator.java -text
+long_term_behav/Reasoner/src/main/java/mainclasses/Configuration.java -text
 long_term_behav/Reasoner/src/main/java/mainclasses/Methods.java -text
 long_term_behav/Reasoner/src/main/java/mainclasses/OutputProvider.java -text
 long_term_behav/Reasoner/src/main/java/mainclasses/SCallee.java -text
