--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -279,5 +279,6 @@
 		<module>../personal_safety/pom</module>
 		<module>../food_shopping/pom</module>
 		<module>../safety_home/pom</module>
+		<module>../medication/pom</module>
 	</modules>
 </project>
