--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,32 @@
 * text=auto !eol
+Configuration[!!-~]files/confadmin/mw.bus.model/sodapop.key -text svneol=unset#application/octet-stream
+Configuration[!!-~]files/confadmin/services/org.ops4j.pax.logging.properties -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_Userkostas_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_de.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_nutritionist_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_saied_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_saied_hr.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_tester_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/main_menu_tester_hr.txt -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/messages.properties -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/messages_de.properties -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/messages_en.properties -text
+Configuration[!!-~]files/confadmin/ui.dm.mobile/messages_hr.properties -text
+Configuration[!!-~]files/confadmin/ui.dm/main_menu.txt -text
+Configuration[!!-~]files/confadmin/ui.dm/main_menu_de.txt -text
+Configuration[!!-~]files/confadmin/ui.dm/main_menu_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm/main_menu_nutritionist_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm/main_menu_saied_en.txt -text
+Configuration[!!-~]files/confadmin/ui.dm/messages.properties -text
+Configuration[!!-~]files/confadmin/ui.dm/messages_de.properties -text
+Configuration[!!-~]files/confadmin/ui.dm/messages_en.properties -text
+Configuration[!!-~]files/confadmin/ui.dm/messages_hr.properties -text
+Configuration[!!-~]files/confadmin/ui.handler.gui/formsPrototypeProperties.properties -text
+Configuration[!!-~]files/confadmin/ui.handler.gui/formsPrototypes.properties -text
+Configuration[!!-~]files/confadmin/ui.handler.gui/guiMessages_en_US.properties -text
+Configuration[!!-~]files/old_agendaDB_with_users.sql -text
+Configuration[!!-~]files/setup[!!-~]instructions.txt -text
 agenda.remote/LICENSE -text
 agenda.remote/NOTICE -text
 agenda.remote/bin/.project -text
