--- a/medication/test_medication_manager.service/pom.xml
+++ b/medication/test_medication_manager.service/pom.xml
@@ -82,10 +82,10 @@
         <configuration>
           <instructions>
             <Bundle-Name>${project.name}</Bundle-Name>
-            <Bundle-Activator>org.universAAL.AALapplication.medication_manager.callers.impl.Activator</Bundle-Activator>
+            <Bundle-Activator>org.universAAL.AALapplication.medication_manager.client.impl.Activator</Bundle-Activator>
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}111111</Bundle-SymbolicName>
-            <Private-Package>org.universAAL.AALapplication.medication_manager.callers.impl</Private-Package>
+            <Private-Package>org.universAAL.AALapplication.medication_manager.client.impl</Private-Package>
           </instructions>
         </configuration>
       </plugin>
