All maven pom files has been refactored

--- a/medication/pom/pom.xml
+++ b/medication/pom/pom.xml
@@ -14,6 +14,22 @@
   <url>http://forge.universaal.org/wiki/new_services:Medication_manager_universAAL_service</url>
 
   <dependencies>
+    <!--
+      The dependency to itests has always come before the dependency to
+      org.osgi.core (groupId:org.apache.felix). The easiest approach is to
+      just put the dependency to itests as the first one.
+     -->
+    <dependency>
+      <groupId>org.universAAL.support</groupId>
+      <artifactId>itests</artifactId>
+      <version>0.1.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.data.representation</artifactId>
