--- a/health/health.ont/pom.xml
+++ b/health/health.ont/pom.xml
@@ -1,5 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
@@ -7,25 +8,19 @@
 		<relativePath>../pom</relativePath>
 	</parent>
 
-  <artifactId>health.ont</artifactId>
-  <name>Health AAL service ontology</name>
-  <description>the concepts for modeling health profile, treatments and motivational data for Health manager AAL service.</description>
-  <packaging>bundle</packaging>
-  
-  <inceptionYear>2011</inceptionYear>  
-  <organization>
-  	<name>Universidad Politécnica de Madrid - UPM</name>
-  	<url>http://www.upm.es</url>
-  </organization>
-  <licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-  </licenses>
-  
-  <dependencies>
+	<artifactId>health.ont</artifactId>
+	<packaging>bundle</packaging>
+
+	<name>Health AAL service ontology</name>
+	<description>the concepts for modeling health profile, treatments and motivational data for Health manager AAL service.</description>
+
+	<inceptionYear>2011</inceptionYear>
+	<organization>
+		<name>Universidad Politécnica de Madrid - UPM</name>
+		<url>http://www.upm.es</url>
+	</organization>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
@@ -46,9 +41,9 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
-  </dependencies>
-    
-    <build>
+	</dependencies>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -67,5 +62,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
