--- a/health/health.treat.logger/pom.xml
+++ b/health/health.treat.logger/pom.xml
@@ -1,26 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>health.pom</artifactId>
-    <groupId>org.universAAL.AALapplication</groupId>
-    <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../pom</relativePath>
-  </parent>
-  <artifactId>health.treat.logger</artifactId>
-  <name>Health Treatment Log</name>
-  <description>Enables Storage, and Listing of Treatments that the assisted person has done</description>
-  <inceptionYear>2011</inceptionYear>  
-  
-  <licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-  </licenses>
-  
-  <dependencies>
-  		<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>health.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>0.1.0-SNAPSHOT</version>
+		<relativePath>../pom</relativePath>
+	</parent>
+
+	<artifactId>health.treat.logger</artifactId>
+
+	<name>Health Treatment Log</name>
+	<description>Enables Storage, and Listing of Treatments that the assisted person has done</description>
+
+	<inceptionYear>2011</inceptionYear>
+
+	<dependencies>
+		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
@@ -32,9 +28,9 @@
 			<groupId>org.universAAL.context</groupId>
 			<artifactId>ctxt.che</artifactId>
 		</dependency>
-  </dependencies>
-    
-    <build>
+	</dependencies>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
