--- a/personal_safety/run/pom.xml
+++ b/personal_safety/run/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>personal_safety.pom</artifactId>
-		<groupId>org.universAAL.AALapplication</groupId>
+		<groupId>org.universAAL.AALapplication.ps</groupId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
   <artifactId>personal_safety.run</artifactId>
   <packaging>jar</packaging>  
-  <version>0.1.0</version>
 
   <build>
     <plugins>  
