--- a/personal_safety/sms.sender/pom.xml
+++ b/personal_safety/sms.sender/pom.xml
@@ -2,14 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
+		<groupId>org.universAAL.AALapplication.ps</groupId>
 		<artifactId>personal_safety.pom</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../pom/pom.xml</relativePath>
+		<version>0.2.0-SNAPSHOT</version>
+		<relativePath>../pom</relativePath>
 	</parent>
 	<artifactId>personal_safety.sms</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.1.0-SNAPSHOT</version>
 	<name>SMS sender Service</name>
 	<description>service to send SMS to a given telephone number using esendex web service</description>
 	<licenses>
@@ -22,50 +21,26 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.io</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-api</artifactId>
-			<version>1.4</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-service</artifactId>
-			<version>1.4</version>
-			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>log4j</artifactId>
-					<groupId>log4j</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -88,4 +63,8 @@
 		</plugins>
 	</build>
 
+	<scm>
+		<connection>${svn.base}/personal_safety/sms.sender</connection>
+		<developerConnection>${svn.base}/personal_safety/sms.sender</developerConnection>
+	</scm>
 </project>
