--- a/personal_safety/sw.panic/pom.xml
+++ b/personal_safety/sw.panic/pom.xml
@@ -1,63 +1,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
+		<groupId>org.universAAL.AALapplication.ps</groupId>
 		<artifactId>personal_safety.pom</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../pom/pom.xml</relativePath>
+		<version>0.2.0-SNAPSHOT</version>
+		<relativePath>../pom</relativePath>
 	</parent>
+
 	<artifactId>personal_safety.sw.panic</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.1.0-SNAPSHOT</version>
+
 	<name>Software Panic Button</name>
 	<description>Maps a SW (GUI) Button as if it where a hardware Button</description>
+
 	<licenses>
 		<license>
 		<name>Apache 2.0</name>
 		<url>http://www.apache.org/licenses/</url>
 		</license>
 	</licenses>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.io</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.risk</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -81,4 +77,8 @@
 		</plugins>
 	</build>
 
+	<scm>
+		<connection>${svn.base}/personal_safety/sw.panic</connection>
+		<developerConnection>${svn.base}/personal_safety/sw.panic</developerConnection>
+	</scm>
 </project>
