--- a/personal_safety/pom/pom.xml
+++ b/personal_safety/pom/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>../../pom</relativePath>
 	</parent>
 
-	<groupId>org.universAAL.AALapplication.ps</groupId>
+	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>personal_safety.pom</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -45,22 +45,22 @@
 				<version>1.0.0</version>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.AALapplication.ps</groupId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>personal_safety.service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.AALapplication.ps</groupId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>personal_safety.sms</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.AALapplication.ps</groupId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>personal_safety.sw.panic</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.AALapplication.ps</groupId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>personal_safety.smp.test-location.publisher</artifactId>
 				<version>${project.version}</version>
 			</dependency>
