--- a/personal_safety/service/pom.xml
+++ b/personal_safety/service/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>org.universAAL.AALapplication.ps</groupId>
+		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>		
 		<version>0.2.0-SNAPSHOT</version>
 		<relativePath>../pom</relativePath>
@@ -48,7 +48,7 @@
 			<artifactId>ont.phWorld</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.AALapplication.ps</groupId>
+			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>personal_safety.sms</artifactId>
 		</dependency>
     </dependencies>
