--- a/personal_safety/sw.panic/pom.xml
+++ b/personal_safety/sw.panic/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.universAAL.AALapplication.ps</groupId>
+		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 		<relativePath>../pom</relativePath>
