--- a/health/pom/pom.xml
+++ b/health/pom/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>health.pom</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Health Management AAL Service</name>
@@ -41,64 +41,43 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.context</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
+				<artifactId>mw.pom</artifactId>
+				<version>1.0.0</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.data.representation</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.context</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.service</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.io</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.pom</artifactId>
+				<version>1.0.0</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.context</groupId>
 				<artifactId>ctxt.che</artifactId>
-				<version>0.2.0-SNAPSHOT</version>
+				<version>1.0.0</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.measurement</artifactId>
-				<version>0.2.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.phWorld</artifactId>
-				<version>0.2.2-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.profile</artifactId>
-				<version>0.3.0-SNAPSHOT</version>
+				<version>1.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>health.ont</artifactId>
-				<version>${pom.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>health.treat.logger</artifactId>
-				<version>${pom.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>health.treat.manager</artifactId>
-				<version>${pom.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
